<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
            android:id="@+id/favorites_destination"
            android:icon="@drawable/animation_favorites"
            android:title="@string/favorites_destination_title"/>
    <item
            android:id="@+id/map_destination"
            android:icon="@drawable/animation_map"
            android:title="@string/map_destination_title"/>
    <item
            android:id="@+id/search_destination"
            android:icon="@drawable/animation_search"
            android:title="@string/search_destination_title"/>
    <item
            android:id="@+id/reminders_destination"
            android:icon="@drawable/animation_reminders"
            android:title="@string/reminders_destination_title"/>
    <item
            android:id="@+id/more_destination"
            android:icon="@drawable/animation_more"
            android:title="@string/more_destination_title"/>
</menu>