...
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

        <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/favorites_recycler_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingTop="4dp"
                android:clipToPadding="false"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
...
            android:layout_marginEnd="16dp" android:layout_marginStart="16dp"
            android:textAlignment="center"
            app:layout_constraintTop_toBottomOf="@+id/no_data_text" app:layout_constraintHorizontal_bias="0.5"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"/>

    <com.leinardi.android.speeddial.SpeedDialView
            android:id="@+id/stop_details_fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_margin="16dp"
            android:alpha="0"
            app:sdMainFabClosedSrc="@drawable/ic_add_black_24dp"
...
